Fixed a bug where metaballs would be drawn with a wrong color
Fixed a bug where metaballs would be drawn with a wrong color. Added the footer with links.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -76,3 +76,18 @@ body {
 #settings span:hover {
 	background-color: #303030;
 }
+
+footer {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	height: 32px;
+	width: 128px;
+	color: white;
+	text-align: center;
+	font-size: 12px;
+	padding: 4px;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+}
